fix alignment issues

--- a/src/styles/_about.scss
+++ b/src/styles/_about.scss
@@ -39,7 +39,7 @@
 }
 
 .user-description {
-  text-align: justify;
+  text-align: center;
   margin: 0 auto;	
 }
 
